# django-ninja-619-reproduction

./: Dockerfile  README.md  docker-compose.yml  postgresql.conf  pyproject.toml
sample_application/: api.py
sample_application/app/migrations/: 0001_initial.py
sample_application/sample_application/: asgi.py  settings.py  urls.py  wsgi.py
